# ILPCR

./: .gitignore  README.md
01_feature_ext/: 02_narf_feature_extraction.cpp  04_realsense_and_narf_feature_extraction.cpp  07_iss_keypoints_from_file.cpp  14_lidar_preprocessing.cpp  15_fpfh_registration.cpp  CMakeLists.txt
01_feature_ext/cfg/: customPreset1.cfg  customPreset1_PN.cfg  customPreset2.cfg  customPreset3.cfg  customPreset4.cfg  customPreset5.cfg  customPreset5a.cfg  customPreset5cu.cfg  customPreset5cuTest.cfg  customPreset6.cfg  customPreset7.cfg
01_feature_ext/log/: 02_logfile.csv  06_normal_fpfh.csv  09_logfile.csv  09_logfile.csv.old  15_fpfh_registration.csv  15_fpfh_registration_oldFormat.csv  20240416_fhtw_hallway_p1_fpfh_3.csv  20240416_fhtw_hallway_p1a_fpfh_3.csv  20240416_fhtw_hallway_p2_fpfh_3.csv  20240416_fhtw_hallway_p2a_fpfh_3.csv  20240416_fhtw_hallway_p3_fpfh_3.csv  20240416_fhtw_hallway_p3a_fpfh_3.csv  20240416_fhtw_hallway_p3a_fpfh_5cu2.csv  20240416_fhtw_hallway_p4_fpfh_3.csv  20240416_fhtw_hallway_p4a_fpfh_3.csv  20240416_fhtw_hallway_p4a_fpfh_5cu2.csv  20240416_fhtw_hallway_p5_fpfh_3.csv  20240416_fhtw_hallway_p5_fpfh_5cu2.csv  20240416_fhtw_hallway_p5a_fpfh_1.csv  20240416_fhtw_hallway_p5a_fpfh_3.csv  20240416_fhtw_hallway_p5a_fpfh_4.csv  20240416_fhtw_hallway_p5a_fpfh_5cu.csv  20240416_fhtw_hallway_p5a_fpfh_5cu2.csv  20240416_fhtw_hallway_p6_fpfh_3.csv  20240416_fhtw_hallway_p6a_fpfh_3.csv  20240416_fhtw_hallway_p6a_fpfh_5cu2.csv  20240416_fhtw_stairs_p5a_fpfh_2.csv  20240416_fhtw_stairs_p5a_fpfh_3cu.csv  20240430_fhtw_f602_p2a_fpfh_4.csv  20240909_fhtw_hallway_p5_fpfh_5cu2.csv  20240909_fhtw_hallway_p5a_fpfh_5cu2.csv  20240909_fhtw_hallway_xavier_p5a_fpfh_5cu2.csv
01_feature_ext/scripts/: batch_thesis.sh  batch_thesis_cpu_mt.sh  batch_thesis_cpu_mt_f602.sh
02_correspondence_estimation/: 01_narf_corr.cpp  08_draw_position_history.cpp  CMakeLists.txt
02_correspondence_estimation/log/: 02_logfile.csv
03_data_aquisition/: 01_RealSense_Capture_PCD_RGB_BAG.cpp  05_tcp_server_testdata.cpp  07_draw_position_stream.cpp  09_stream_logged_data.cpp  CMakeLists.txt  log
03_data_aquisition/camera_settings/: D415_default.json  D415_high_density.json  D455_high_accuracy.json  D455_high_density.json
05_pipeline/: 01_pipeline.cpp  02_convert_log.cpp  CMakeLists.txt
05_pipeline/camera_settings/: D415_high_accuracy.json  D455_default.json
05_pipeline/log/csv/: pose_log_2024-06-23_09:16:20_UTC.csv  pose_log_2024-06-23_13:12:39_UTC.csv  pose_log_2024-08-31_12:55:17_UTC.csv  pose_log_2024-09-02_07:56:30_UTC.csv  pose_log_2024-09-08_19:11:37_UTC.csv  pose_log_laptop_2024-09-09_08:46:59_UTC.csv  pose_log_laptop_2024-09-09_09:00:44_UTC.csv  pose_log_laptop_2024-09-09_09:06:46_UTC.csv  pose_log_laptop_2024-09-09_10:59:36_UTC.csv  pose_log_laptop_2024-09-09_11:02:24_UTC.csv  pose_log_laptop_2024-09-09_11:04:58_UTC.csv  pose_log_laptop_2024-09-09_11:06:17_UTC.csv  pose_log_xavier_2024-09-09_07:25:41_UTC.csv  pose_log_xavier_2024-09-09_07:27:46_UTC.csv  pose_log_xavier_2024-09-09_07:31:31_UTC.csv  pose_log_xavier_2024-09-09_07:33:39_UTC.csv  pose_log_xavier_2024-09-09_07:35:41_UTC.csv  pose_log_xavier_2024-09-09_07:36:04_UTC.csv  pose_log_xavier_2024-09-09_07:38:16_UTC.csv  pose_log_xavier_2024-09-09_07:40:29_UTC.csv
CMakeLogs/: Cupoch.txt  PCL.txt
files/: 20231121_fhtw_hallway.pcd  20231121_fhtw_hallway_groundplane_tf.pcd  20231213_F602_highres.pcd  20231213_F602_highres_clip_table_tf.pcd
files/feature_desc/: 20231121_fhtw_hallway_groundplane_tf_fpfh_5_fpfh_fgr_gpu_PointNormal.pcd  20231121_fhtw_hallway_groundplane_tf_fpfh_5_fpfh_fgr_gpu_fpfh33.pcd
files/file_lists/: 20240416_fhtw_stairs_p6a_fpfh_5_fpfh_fgr_gpu.flist  20240416_fhtw_stairs_p6a_fpfh_5_fpfh_fgr_gpu_false_positives.flist  20240416_fhtw_stairs_p6a_fpfh_5_fpfh_fgr_gpu_pos_only.flist
lib/ilpcr/: CMakeLists.txt  CmakeInclude.txt  Cmakelist_CUPOCH_include.txt
lib/ilpcr/include/ilpcr/: camera.h  corr_estimation.h  debug.h  feature_estimation.h  file_io.h  filters.h  ilpcrCupoch.h  log.h  network.h  presets.h  testdata.h  types.h  viewer.h
lib/ilpcr/src/: camera.cpp  corr_estimation.cpp  feature_estimation.cpp  file_io.cpp  filters.cpp  ilpcrCupoch.cpp  log.cpp  network.cpp  presets.cpp  testdata.cpp  viewer.cpp
